# MedView-LMU-MLOps-SoSe25-GroupB

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.distributed  README.html  README.md  cloud_config.yaml  cloud_run.yaml  cloudbuild.yaml  cloudbuild_distributed.yaml  data.dvc  distributed_cloud_config.yaml  docker-compose.yml  environment.yml  index.html  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  vite.config.ts
.dvc/: config
.github/: dependabot.yaml
.streamlit/: config.toml
backend/: monitoring.py  requirements.txt  setup_monitoring.py  test_monitoring.py
dockerfiles/: Dockerfile  api.Dockerfile  cloudbuild.yaml  entrypoint.sh  frontend.Dockerfile  prometheus.Dockerfile  sweep.Dockerfile  train.Dockerfile
docs/: .buildinfo  architecture.html  architecture.rst  conf.py  deployment.html  deployment.rst  genindex.html  index.html  index.rst  installation.html  installation.rst  introduction.html  introduction.rst  monitoring.md  objects.inv  quickstart.html  quickstart.rst  search.html  searchindex.js
frontend/: .eslintrc.cjs  package.json  tsconfig.app.json  vite.config.ts
ml/: data.py  dataset_statistics.py  distributed_train.py  evaluate.py  features.py  models.py  models_.py  predict.py  requirements.txt  train.py  train_cloud.py  train_sweep.py  utils.py  visualize.py
monitoring/: Dockerfile  README.md  __init__.py  requirements.txt
reports/: README.html  README.md
src/: api_client.py  frontend.py  requirements.txt
tests/: requirements_tests.txt  test_api.py  test_data.py  test_model.py  (+1 more)
(+146 files in other folders)
