[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MedView"
version = "0.1.0"
authors = [
    { name = "Minh Nguyen", email = "tuan.minh.nguyenn1008@gmaik.com" },
    { name = "Uyen Nguyen" },
    { name = "Euna Goo" },
    { name = "Sara Theerdha" }
]
description = "MedView is a tool that helps doctors and patients to diagnose and treat diseases."
requires-python = ">=3.8"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["ml/requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]
